tests-system/rbt-single-value-assignment/output
critical    = true
^^^^^^^^ rbt-single-value-assignment/foo.trlc:6: error: component 'critical' already assigned at line 4
description = "This is not fine anymore"
^^^^^^^^^^^ rbt-single-value-assignment/foo.trlc:12: error: component 'description' already assigned at line 10
Processed 1 model and 1 requirement file and found 2 errors
